samples/_failures_safe/1761664013_f9f490_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b129c77.c: In function ‘main’:
./samples/SAFE/__tmp_7b129c77.c:178:26: error: ‘t’ undeclared (first use in this function)
  178 |         print_token_type(t
      |                          ^
./samples/SAFE/__tmp_7b129c77.c:178:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7b129c77.c:178:27: error: expected ‘)’ at end of input
  178 |         print_token_type(t
      |                         ~ ^
      |                           )
./samples/SAFE/__tmp_7b129c77.c:178:9: error: expected declaration or statement at end of input
  178 |         print_token_type(t
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7b129c77.c:178:9: error: expected declaration or statement at end of input
